--- a/index.html
+++ b/index.html
@@ -58,20 +58,11 @@
       <main class="mdl-layout__content">
         <p></p>
         <img
-          src="./images/notebook-animation.svg"
-          alt="Computer"
+          src="./images/cookie.png"
+          alt="cookie"
           width="25%"
           height="25%"
         />
-        <p></p>
-        <!-- Raised button with ripple -->
-        <button
-          class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
-          onclick="myButtonClicked()"
-        >
-          Say "Hello, World!"
-        </button>
-        <!-- basic text -->
         <p></p>
         <div id="hello-world"></div>
       </main>
