--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
       </header>
       <main class="mdl-layout__content">
         <p></p>
-        <img src="./images/cookie.png" alt="cookie" width="25%" height="25%" />
+        <img onclick="cookiePoint()" src="./images/cookie.png" alt="cookie" width="25%" height="25%" />
         <p></p>
-        <div id="hello-world"></div>
+        <div id="hits"></div>
       </main>
     </div>
   </body>
