--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
           onclick="cookiePoint()"
           src="./images/cookie.png"
           alt="cookie"
-          width="25%"
-          height="25%"
+          width="auto"
+          height="auto"
         />
         <p></p>
         <div id="hits"></div>
